# dts_visualizer

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
src/dts_visualizer/: bindings.py  exporter.py  icon_map.py  main.py  model.py  parser.py  serializer.py  ui_mainwindow.py
tests/: conftest.py  device_tree.dts  test_bindings.py  test_exporter.py  test_parser.py
